plugins/sidescan/SidescanAnalyzer: Fix Java9+ deprecation for new Double.